linked css file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>quiz</title><link rel="stylesheet" type="text/css" href="Resource/css/quizstyle.css">
+	<title>quiz</title><link rel="stylesheet" type="text/css" href="./css/quiz.css">
 </head>
 <body><h1>Mathematics quiz</h1><hr><p><b><i>Tick the correct answer.<br>All questions carry equal marks</i></b></p>
 	<form name="myform"><div class="wrapper">
@@ -67,7 +67,7 @@
 		var result=0;
 		var failed="";
         if (Q1=="b") {
-.        	result+=10;
+        	result+=10;
         	}else{
         	failed+="Q1,";
         }
